# upf

./: .gitignore  CMakeLists.txt  go.mod  go.sum  readme.md  upf_release.sh
config/: upfcfg.example.yaml  upfcfg.test.example.yaml  upfcfg.ulcl.example.yaml
lib/gtp5g/: .gitignore  Makefile  gtp5g.c  gtp5g.h  readme.md
lib/gtpv1/: CMakeLists.txt
lib/gtpv1/include/: gtp_buffer.h  gtp_link.h  gtp_rule.h  gtp_tunnel.h
lib/gtpv1/src/: gtp_buffer.c  gtp_link.c  gtp_path.c  gtp_rule.c  gtp_tunnel.c
lib/knet/: CMakeLists.txt  test.c
lib/knet/src/: route.c
lib/libgtp5gnl/: .gitignore  README.md  libgtp5gnl.pc.in
lib/libgtp5gnl/include/libgtp5gnl/: gtp5g.h
lib/libgtp5gnl/include/linux/: gtp5g.h
lib/libgtp5gnl/src/: genl.c  gtp5g-genl-far.c  gtp5g-genl-pdr.c  gtp5g-rtnl.c  gtp5g.c  internal.h  libgtp5gnl.map
lib/libgtp5gnl/tools/: gtp5g-link.c  gtp5g-tunnel.c
lib/pfcp/: CMakeLists.txt
lib/pfcp/include/: pfcp_convert.h  pfcp_message.h  pfcp_node.h  pfcp_path.h  pfcp_types.h  pfcp_xact.h
lib/pfcp/src/: pfcp_convert.c  pfcp_message.c  pfcp_node.c  pfcp_path.c  pfcp_types.c  pfcp_xact.c
lib/pfcp/support/: .gitignore  29244-f30-ch7-fixed-table.docx  29244-f30-ch8.1.2-1.docx  pfcpDocxParser.py  requirements.txt
lib/pfcp/test/: CMakeLists.txt  test.c
lib/pfcp/test/src/: testPfcpConvert.c
lib/test/: CMakeLists.txt  test.c
lib/test/assets/: testconfig.yaml
lib/test/include/: test_utlt.h
lib/test/src/: test3gppTypes.c  testBuff.c  testDebug.c  testEvent.c  testHash.c  testIndex.c  testList.c  testMq.c  testNetwork.c  testPool.c  testThread.c  testTime.c  testTimer.c  testYaml.c
lib/utlt/: CMakeLists.txt
lib/utlt/include/: utlt_3gppTypes.h  utlt_buff.h  utlt_debug.h  utlt_index.h  utlt_list.h  utlt_netheader.h  utlt_network.h  utlt_pool.h  utlt_test.h  utlt_time.h  utlt_timer.h
lib/utlt/logger/: logger.go
lib/utlt/src/: utlt_3gppTypes.c  utlt_buff.c  utlt_debug.c  utlt_epoll.c  utlt_event.c  utlt_hash.c  utlt_lib.c  utlt_mq.c  utlt_sockAddr.c  utlt_socket.c  utlt_test.c  utlt_thread.c  utlt_time.c  utlt_timer.c  utlt_udp.c  utlt_unix_sock.c  utlt_yaml.c
src/: CMakeLists.txt  upf.c  upf_config.c  upf_config.h  upf_context.c  upf_context.h  upf_init.c  upf_init.h
src/n4/: n4_dispatcher.c  n4_pfcp_build.c  n4_pfcp_build.h  n4_pfcp_handler.c  n4_pfcp_handler.h  n4_pfcp_path.c
src/up/: up_gtp_path.c  up_gtp_path.h  up_match.c  up_match.h  up_path.c  up_path.h
test/: CMakeLists.txt
updk/: CMakeLists.txt
updk/include/linux/: list.h
updk/include/updk/: env.h  init.h  rule.h  rule_far.h  rule_pdr.h  rule_qer.h
updk/src/: env.c
updk/src/kernel/: CMakeLists.txt  gtp5g_buffer.c  gtp5g_buffer.h  gtp5g_context.c  gtp5g_context.h  init.c
updk/src/kernel/gtpv1/: CMakeLists.txt
updk/src/kernel/gtpv1/include/: gtp_link.h  gtp_path.h  gtp_tunnel.h
updk/src/kernel/gtpv1/src/: gtp_link.c  gtp_path.c  gtp_tunnel.c
updk/src/kernel/knet/: CMakeLists.txt  test.c
updk/src/kernel/knet/include/: knet_route.h
updk/src/kernel/knet/src/: route.c
updk/src/kernel/rule/: far.c  pdr.c  qer.c  rule_tools.h
